--- a/index.html
+++ b/index.html
@@ -2,53 +2,46 @@
 <html>
   <head>
     <title>JavaScript lodash Templates Lab</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <main>
-
       <form id="post-form" onsubmit="createPost();return false;">
-        Title: <input type="text" id="postTitle">
+        Title: <input type="text" id="postTitle"><br>
         Author: <input type="text" id="postAuthor"><br>
-        Post: <br><textarea rows="4" cols="50" name="post" id="postBody"></textarea><br>
+        Post: <input type="text" id="postBody"><br>
         <input type="submit">
       </form>
-
     </main>
     <script src="node_modules/lodash/lodash.min.js"></script>
     <script src="index.js"></script>
-    <!-- Open this file and call `mocha.run()` in console to run tests -->
-
     <script id="comments-template" type="text/x-lodash-template">
       <div id="comments">
         <form onsubmit="postComment();return false;">
           Name: <input type="text" id="commenter"><br>
-          Comment: <br><textarea rows="2" cols="25" name="comment" id="comment"></textarea><br>
+          Comment: <input type="text" id="commentText"><br>
           <input type="submit">
         </form>
       </div>
     </script>
-
     <script id="comment-template" type="text/x-lodash-template">
       <div>
         <p><%= comment %></p>
         <footer>Posted by: <%= commenter %></footer>
       </div>
     </script>
-
-     <script id="page-template" type="text/x-lodash-template">
+    <script id="page-template" type="text/x-lodash-template">
       <div id="sidebar"></div>
       <div id="post"></div>
     </script>
-
     <script id="post-template" type="text/x-lodash-template">
       <article>
         <header><h2><%- title %></h2><header>
         <p><%- body %></p>
-        <footer>Posted by: <%- poster %></footer>
+        <footer>Posted by: <%= poster %></footer>
       </article>
     </script>
-
+    </main>
+    <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
