--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </div>
     </script>
     <script id="page-template" type="text/x-lodash-template">
-      <div id="sidebar">sidebar</div>
-      <div id="post">post</div>
+      <div id="sidebar"></div>
+      <div id="post"></div>
     </script>
     <script id="post-template" type="text/x-lodash-template">
       <article>
