--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       <form id="post-form" onsubmit="createPost();return false;">
         Title: <input type="text" id="postTitle"><br>
         Author: <input type="text" id="postAuthor"><br>
-        Post: <input type="text" id="postBody" style="width:200px; height:50px;"cols="40" 
-       rows="5"><br>
+        Post: <textarea name="textarea" style="width:250px;height:150px;" id="postBody"></textarea><br>
         <input type="submit">
       </form>
     </main>
