--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <form id="post-form" onsubmit="createPost();return false;">
         Title: <input type="text" id="postTitle"><br>
         Author: <input type="text" id="postAuthor"><br>
-        Post: <textarea name="textarea" style="width:250px;height:150px;" id="postBody"></textarea><br>
+        Post:<br><textarea name="textarea" style="width:250px;height:150px;" id="postBody"></textarea><br>
         <input type="submit">
       </form>
     </main>
